// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BrNodeContainerItemDirective getMapping should override undefined container item 1`] = `
<div>
  <br-container-item-test>
    <a>
      something
    </a>
  </br-container-item-test>
  
</div>
`;

exports[`BrNodeContainerItemDirective getMapping should render a mapped container item 1`] = `
<div>
  <br-container-item-test>
    <a>
      something
    </a>
  </br-container-item-test>
  
</div>
`;

exports[`BrNodeContainerItemDirective getMapping should render undefined container item 1`] = `
<div>
  <br-container-item-undefined />
  
</div>
`;

exports[`BrNodeContainerItemDirective ngOnChanges should react on update events 1`] = `
<div>
  <br-container-item-test>
    <a>
      updated
    </a>
  </br-container-item-test>
  
</div>
`;
